--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -127,7 +127,7 @@
  PROV126: "Elena Cape"
  PROV127: "Tyronal"
  PROV128: "Hadasta"
- PROV129: "Tummic Lakes"
+ PROV129: "Vihreäjärvi"
  PROV130: "Geccania"
  PROV131: "Khaymar"
  PROV132: "Hamidar"
@@ -2864,7 +2864,7 @@
  PROV2863: "Gotoodooya"
  PROV2864: "Dosadooya"
  PROV2865: "Setepana" 
- PROV2866: "2866"
+ PROV2866: "Soinenjärvi"
  PROV2867: "2867"
  PROV2868: "Ohaboai"
  PROV2869: "2869"
@@ -3499,7 +3499,7 @@
  PROV3498: "Kinvai"
  PROV3499: "Sonyochama"
  PROV3500: "Kvinbifalg"
- PROV3501: "3501"
+ PROV3501: "Hirvijärvi"
  PROV3502: "Kaykali"
  PROV3503: "3503"
  PROV3504: "Malkati"
@@ -3520,12 +3520,12 @@
  PROV3519: "3519"
  PROV3520: "Kathsrpa"
  PROV3521: "Daskivistar"
- PROV3522: "3522"
+ PROV3522: "Tumma"
  PROV3523: "Tilaf"
  PROV3524: "Nadivi"
  PROV3525: "Bgosan"
  PROV3526: "Atuma"
- PROV3527: "3527"
+ PROV3527: "Rajaajärvi"
  PROV3528: "3528"
  PROV3529: "3529"
  PROV3530: "3530"
@@ -4050,7 +4050,7 @@
  PROV4049: "4049"
  PROV4050: "4050"
  PROV4051: "4051"
- PROV4052: "Tummic Lakes"
+ PROV4052: "Koskejärvi"
  PROV4053: "4053"
  PROV4054: "4054"
  PROV4055: "4055"
@@ -4092,7 +4092,7 @@
  PROV4091: "4091"
  PROV4092: "4092"
  PROV4093: "4093"
- PROV4094: "4094"
+ PROV4094: "Hylkeidenjärvi"
  PROV4095: "4095"
  PROV4096: "4096"
  PROV4097: "4097"
@@ -4109,7 +4109,7 @@
  PROV4108: "4108"
  PROV4109: "4109"
  PROV4110: "Gapratikh"
- PROV4111: "4111"
+ PROV4111: "Paskalampi"
  PROV4112: "4112"
  PROV4113: "4113"
  PROV4114: "4114"
@@ -4134,7 +4134,7 @@
  PROV4133: "4133"
  PROV4134: "4134"
  PROV4135: "4135"
- PROV4136: "4136"
+ PROV4136: "Korkejärvi"
  PROV4137: "4137"
  PROV4138: "4138"
  PROV4139: "4139"
@@ -4155,7 +4155,7 @@
  PROV4154: "4154"
  PROV4155: "4155"
  PROV4156: "4156"
- PROV4157: "4157"
+ PROV4157: "Tyttöjen Järviä"
  PROV4158: "4158"
  PROV4159: "4159"
  PROV4160: "4160"
@@ -4349,7 +4349,7 @@
  PROV4348: "Dedahan" #gold
  PROV4349: "Ifaran" #caves
  PROV4350: "4350"
- PROV4351: "4351"
+ PROV4351: "Peräjärvi"
  PROV4352: "4352"
  PROV4353: "4353"
  PROV4354: "4354"
@@ -4388,7 +4388,7 @@
  PROV4387: "4387"
  PROV4388: "4388"
  PROV4389: "4389"
- PROV4390: "4390"
+ PROV4390: "Maitojärvi"
  PROV4391: "4391"
  PROV4392: "4392"
  PROV4393: "4393"
@@ -4500,20 +4500,20 @@
  PROV4499: "4499"
  PROV4500: "4500"
  PROV4501: "4501"
- PROV4502: "4502"
- PROV4503: "4503"
- PROV4504: "4504"
- PROV4505: "4505"
- PROV4506: "4506"
- PROV4507: "4507"
- PROV4508: "4508"
- PROV4509: "4509"
- PROV4510: "4510"
- PROV4511: "4511"
- PROV4512: "4512"
- PROV4513: "4513"
- PROV4514: "4514"
- PROV4515: "4515"
+ PROV4502: "Raivas"
+ PROV4503: "Allia"
+ PROV4504: "Tursast"
+ PROV4505: "Pitkäjärvi"
+ PROV4506: "Tyynijärvi"
+ PROV4507: "Punajärvi"
+ PROV4508: "Myrskyjärvi"
+ PROV4509: "Ankkajärvi"
+ PROV4510: "Suurijärvi"
+ PROV4511: "Sarvijärvi"
+ PROV4512: "Terhojärvi"
+ PROV4513: "Koivujärvi"
+ PROV4514: "Metsästäjänjärvi"
+ PROV4515: "Soran"
  PROV4516: "4516"
  PROV4517: "4517"
  PROV4518: "4518"
