--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -97,7 +97,7 @@
  kakigian_frontier_reform_desc: "Fertile soils and mountains rich with resources in Kakigia remain unexploited. The wast steppe awaits anyone willing to tame the brutal hordes."
  kakigian_frontier_reform_tt: "Have had §YSelf-sustainable Colonies§! age ability."
  unlock_kakigian_frontier_reform_tt: "Unlock the government reform §YKakigian Frontier§!."
- unlocked_kakigian_frontier_reform: "Unlocked Kakigian Frontier"
+ unlocked_kakigian_frontier_reform_tt: "Has unlocked '§YKakigian Frontier§!' government reform."
 
  northern_march_reform: "Northern March"
  northern_march_reform_desc: "These lands are the remnants of the imperial campaigns north to conquer labosian tribes; by granting the power to localy elected lords it secured a powerful and stable frontier."
