--- a/localisation/TD_peasants_l_english.yml
+++ b/localisation/TD_peasants_l_english.yml
@@ -122,16 +122,16 @@
 
  estate_peasants_disaster: "Commoner Coup"
  EST_CRUSHED_PEASANTS: "The Peasants have been curtailed"
-#check cossacks_l_english
-#  estate_disasters.11.t: "The $ESTATE_PEASANTS$ Seize Power"
-#  estate_disasters.11.d: "$MONARCH$ has allowed the $ESTATE_PEASANTS$ of $COUNTRY$ to grow too powerful and now they have made their move. Making use of their many hard-earned privileges as well as the many debts owed to them, they have effectively seized the reins of government and turned the $MONARCHTITLE$ into little more than their puppet."
-#  estate_disasters.11.a: "We should have seen this coming..."
-#  estate_disasters.11.a.tt: "[Root.GetName] will now be controlled by the §YPeasants§! until the §Y'Curtail the Peasantry'§! decision is taken."
-#  estate_disasters.100.t: "The [Root.GetPeasantryName] Curtailed"
-#  estate_disasters.100.d: "We have finally managed to break our reliance on the [Root.GetPeasantryName], reclaiming control over all important state functions and reducing these peddlers to their rightful confines within the city walls."
-#  estate_disasters.100.a: "The $MONARCHTITLE$ is back in control."
-#  curtail_estate_peasants_title: "Curtail the Peasantry"
-#  curtail_estate_peasants_desc: "By slowly crushing local rebellious peasants and stripping them of their rights we are able to finally curtail their power over the state."
+ #check cossacks_l_english
+ #estate_disasters.11.t: "The $ESTATE_PEASANTS$ Seize Power"
+ #estate_disasters.11.d: "$MONARCH$ has allowed the $ESTATE_PEASANTS$ of $COUNTRY$ to grow too powerful and now they have made their move. Making use of their many hard-earned privileges as well as the many debts owed to them, they have effectively seized the reins of government and turned the $MONARCHTITLE$ into little more than their puppet."
+ #estate_disasters.11.a: "We should have seen this coming..."
+ #estate_disasters.11.a.tt: "[Root.GetName] will now be controlled by the §YPeasants§! until the §Y'Curtail the Peasantry'§! decision is taken."
+ estate_disasters.100.t: "The [Root.GetPeasantryName] Curtailed"
+ estate_disasters.100.d: "We have finally managed to break our reliance on the [Root.GetPeasantryName], reclaiming control over all important state functions and reducing these peddlers to their rightful confines within the city walls."
+ estate_disasters.100.a: "The $MONARCHTITLE$ is back in control."
+ curtail_estate_peasants_title: "Curtail the Peasantry"
+ curtail_estate_peasants_desc: "By slowly crushing local rebellious peasants and stripping them of their rights we are able to finally curtail their power over the state."
 
  estate_peasants_hire_adm_advisor: "Hire an Administrative Advisor"
  estate_peasants_fire_adm_advisor: "Fire our Administrative Advisor"
