--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -362,7 +362,7 @@
  sayutala_area: "Sayutala"
  hariq_pass_area: "Hariq Pass"
 
- muzbah_area: "Muzbah"
+ hafan_area: "Hafan"
  pusgiva_area: "Pusgiva"
  qus_area: "Qus"
  sunpah_area: "Sunpah"
