--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -981,7 +981,7 @@
  PROV980: "Horian Depths"
  PROV981: "Arak" #cavern
  PROV982: "Central Amsulan Gulf"
- PROV983: "983"
+ PROV983: "Ehran"
  PROV984: "984"
  PROV985: "Fawud"
  PROV986: "Fawud"
@@ -1144,7 +1144,7 @@
  PROV1143: "Tisn"
  PROV1144: "Yanlan Coast" 
  PROV1145: "Gebula"
- PROV1146: "1146"
+ PROV1146: "Subat"
  PROV1147: "Xatani" #dangerous pass
  PROV1148: "Azgur"
  PROV1149: "1149"
@@ -4317,30 +4317,30 @@
  PROV4316: "Tifawat" #early morning
  PROV4317: "Tizian" #pass
  PROV4318: "Tenera"
- PROV4319: "4319"
- PROV4320: "4320"
- PROV4321: "4321"
- PROV4322: "4322"
- PROV4323: "4323"
- PROV4324: "4324"
- PROV4325: "4325"
- PROV4326: "4326"
- PROV4327: "4327"
- PROV4328: "4328"
- PROV4329: "4329"
+ PROV4319: "Subat"
+ PROV4320: "Ihäräwän"
+ PROV4321: "Asuneri"
+ PROV4322: "Aremorar"
+ PROV4323: "Awnaraf"
+ PROV4324: "Tamzaner"
+ PROV4325: "Mamran"
+ PROV4326: "Asridem"
+ PROV4327: "Tasbat"
+ PROV4328: "Bersibure"
+ PROV4329: "Ehezden" #Êhezden
  PROV4330: "Tenera"
- PROV4331: "4331"
- PROV4332: "4332"
- PROV4333: "4333"
- PROV4334: "4334"
+ PROV4331: "Aharan"
+ PROV4332: "Esledagama"
+ PROV4333: "Ellämgar"
+ PROV4334: "Jeretakk"
  PROV4335: "Fafaran"
  PROV4336: "Igzadal"
- PROV4337: "4337"
+ PROV4337: "Tibrar"
  PROV4338: "Tenera"
- PROV4339: "4339"
- PROV4340: "4340"
+ PROV4339: "Manasuf"
+ PROV4340: "Berdan"
  PROV4341: "Tenera"
- PROV4342: "4342"
+ PROV4342: "Benuba"
  PROV4343: "4343"
  PROV4344: "4344"
  PROV4345: "Ilmuhirjan"
