--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -104,3 +104,10 @@
  sudian_sea_tradenode: "Sudian Sea"
  pipobsa_tradenode: "Pipobsa"
  daraka_tradenode: "Daraka"
+ bosonapan_coast_tradenode: "Bosonapan Coast"
+ mattosan_tradenode: "Mattosan"
+ parrout_tradenode: "Parrout"
+ okoeruara_tradenode: "Okeruara"
+ tenera_tradenode: "Ehezdan"
+ sanooma_tradenode: "Sanooma"
+ anzaqan_tradenode: "Maqhazian Coast"
