--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1502,3 +1502,8 @@
  CRE_ADJ: "Crenaidean"
  BAI: "Bailthuaidh"
  BAI_ADJ: "Bailthuaidhan"
+
+ PGR: "Pagar"
+ PGR_ADJ: "Pagarian"
+ KOO: "Kotorat"
+ KOO_ADJ: "Kotoratian"
