--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4313,7 +4313,7 @@
  PROV4312: "Igizan" #bull
  PROV4313: "Qatramahz" #City of Qatran (Frankincense)
  PROV4314: "Amtaygul"
- PROV4315: "4315"
+ PROV4315: "Dalta"
  PROV4316: "Tifawat" #early morning
  PROV4317: "Tizian" #pass
  PROV4318: "Tenera"
@@ -4515,14 +4515,14 @@
  PROV4514: "Metsästäjänjärvi"
  PROV4515: "Soran"
  PROV4516: "Montebrum"
- PROV4517: "4517"
- PROV4518: "4518"
- PROV4519: "4519"
- PROV4520: "4520"
- PROV4521: "4521"
+ PROV4517: "Tanriq"
+ PROV4518: "Abbran"
+ PROV4519: "Aslamat"
+ PROV4520: "Darak"
+ PROV4521: "Dalalun"
  PROV4522: "4522"
- PROV4523: "4523"
- PROV4524: "4524"
+ PROV4523: "Alwamira" #Mirrha Valley
+ PROV4524: "Naesakh" #Soft Rock
  PROV4525: "4525"
  PROV4526: "4526"
  PROV4527: "4527"
