--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -661,8 +661,8 @@
 
  VIP: "Visparaya"
  VIP_ADJ: "Visparayan"
- VIP2: "Vipsaryana"
- VIP2_ADJ: "Vipsaryana"
+ VIP2: "Visparyana"
+ VIP2_ADJ: "Visparyana"
  VAZ: "Varazanah"
  VAZ_ADJ: "Varazan"
 
