Bkuslcuht Fur Event
Also renamed it from Bkuslcuht to Erambrei, after the state both provinces are located in.

--- a/localisation/TD_01_flavour_bkuslcuht_region_l_english.yml
+++ b/localisation/TD_01_flavour_bkuslcuht_region_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- bkuslcuht_fur_modifier: "Bkuslcuht Jungle Fur Abundance"
+ bkuslcuht_fur_modifier: "Erambrei Jungle Fur Abundance"
  kabonen_ideas: "Kabonenian Ideas"
  kabonen_ideas_start: "Kabonenian Traditions"
  kabonen_ideas_bonus: "Kabonenian Ambition"
@@ -56,3 +56,7 @@
  bkuslcuht_end_of_religious_frontier_desc: "With Unification of Bkuslcuht, most of our country is converted to one, true faith, but we must double our efforts to bring said faith to the farthest corners of our country."
  bkuslcuht_matriarchal_authority: "Matriarchal Authority"
  bkuslcuht_matriarchal_authority_desc: "With dawn of absolutism, our Queen is treated with highest authority, has last say in all of the Bkuslcuhtan matters, and is beloved by all of her subjects."
+ 
+ bkuslcuht.1.t: "End of Erambrei Fur Abundance"
+ bkuslcuht.1.desc: "The Erambrei Jugnle was abundant in the fur due to high numbers of furred animals, but due to extensive hunting over past century, the numbers of potential animals have diminished, bringing some species into near extinction, and making those provinces abundant no more."
+ bkuslcuht.1.a: "We should have respected the mother nature"
