loc + area changes + setup changes

--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -349,7 +349,6 @@
  dimaryan_area: "Dimaryan"
  sayaanud_area: "Sayaanud"
  tunihar_area: "Tunihar"
- mustir_pass_area: "Mustir Pass"
  imadra_area: "Imadra"
  kuhbiri_area: "Kuhbiri"
  alusarq_area: "Alusarq"
@@ -937,3 +936,5 @@
  rechland_area: "Rechland"
  faran_area: "Faran"
  bariqa_area: "Bariqa"
+ ephraikever_area: "Ephraikever"
+ mustir_area: "Mustir"
