--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -660,7 +660,7 @@
  PROV659: "Aqerbic Plateau"
  PROV660: "Coast of Urmadin"
  PROV661: "Himmelnberg"
- PROV662: "Bay of Antawil"
+ PROV662: "Kahnari Bay"
  PROV663: "Eisenburg"
  PROV664: "Dafdan Sea"
  PROV665: "Auwald"
