--- a/localisation/TD_estate_names_l_english.yml
+++ b/localisation/TD_estate_names_l_english.yml
@@ -1,5 +1,7 @@
 ﻿l_english:
  #nobles
+ estate_tuxama: "Tuxama"
+ estate_taxama: "Taxama"
  estate_asaman: "Asaman"
  estate_drotaci: "Drotaci"
  estate_yujihadga: "Yujihadga"
@@ -13,9 +15,11 @@
  estate_priesthood: "Priesthood"
  estate_zimbuksi: "Zimbuksi"
  estate_saltoir: "Sáltóir"
+ estate_bekhers: "Bekhers"
  #Merchants
  estate_oligarchs: "Oligárches"
  estate_brysawgar: "Bryšawgari"
+ estate_adiawar: "Ádiawar"
  #Cossacks
  estate_ratsunikud: "Ratsunikud"
  estate_kakigos: "Kakigos"
