--- a/localisation/TD_naval_doctrines_l_english.yml
+++ b/localisation/TD_naval_doctrines_l_english.yml
@@ -3,3 +3,5 @@
  doctrine_indriger_matkit_desc: "Njunnialmmuk tradition of outsider fascination has made us eager to explore distant lands, which requires us to construct durable ships capable of lasting long months, and even years, on the sea."
  doctrine_pyrinasa: "Pýrinása"
  doctrine_pyrinasa_desc: "Pýrinása, or firebreathers, are special units available to Achnith and Apaxtaros. Innovative technology of these ships is owed to ancient people of Pamkusea, but the technology was recently rediscovered to combat visparayan invaders."
+ doctrine_maqrinian: "Maqrinian Doctrine"
+ doctrine_maqrinian_desc: "The focus on heavy bombardment of the enemy from a safe distance will not only ensure naval victories, but will allow for quicker sieges of coastal strongholds."
