--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1465,7 +1465,7 @@
  PROV1464: "1464"
  PROV1465: "Tetepoz"
  PROV1466: "Teocuitlacozcatl"
- PROV1467: "1467"
+ PROV1467: "Eastern Qarasam Sea"
  PROV1468: "Xochatl"
  PROV1469: "Iyetl"
  PROV1470: "Aceitecuahuitl"
@@ -1881,9 +1881,9 @@
  PROV1880: "1880"
  PROV1881: "1881"
  PROV1882: "1882"
- PROV1883: "1883"
+ PROV1883: "Southeastern Ilonardian Sea"
  PROV1884: "1884"
- PROV1885: "1885"
+ PROV1885: "Eastern Ilonardian Sea"
  PROV1886: "Agohada"
  PROV1887: "Hokitan"
  PROV1888: "Niseyaki"
@@ -1921,7 +1921,7 @@
  PROV1920: "1920"
  PROV1921: "Bayesh"
  PROV1922: "1922"
- PROV1923: "1923"
+ PROV1923: "West Fimaqan Sea"
  PROV1924: "1924"
  PROV1925: "1925"
  PROV1926: "Methiwe"
@@ -1940,7 +1940,7 @@
  PROV1939: "1939"
  PROV1940: "1940"
  PROV1941: "1941"
- PROV1942: "1942"
+ PROV1942: "Southern Fimaqan Sea"
  PROV1943: "1943"
  PROV1944: "Tedebukoshawa"
  PROV1945: "Washewakche"
@@ -2076,7 +2076,7 @@
  PROV2075: "Takhunit"
  PROV2076: "2076"
  PROV2077: "2077"
- PROV2078: "2078"
+ PROV2078: "Northern Escravian Sea"
  PROV2079: "Gatkarha"
  PROV2080: "Kustira"
  PROV2081: "2081"
@@ -2151,10 +2151,10 @@
  PROV2150: "Gazdum"
  PROV2151: "Baraqhaz"
  PROV2152: "Šagrabr"
- PROV2153: "2153"
+ PROV2153: "Dewalan Coast"
  PROV2154: "Gahbader"
  PROV2155: "Urwazid"
- PROV2156: "2156"
+ PROV2156: "Outer Bosonapan Sea"
  PROV2157: "Amanawid"
  PROV2158: "Gabrašahr"
  PROV2159: "Maraqiz"
@@ -2192,11 +2192,11 @@
  PROV2191: "Jigsür"
  PROV2192: "Khavrytol"
  PROV2193: "Western Nesan Sea"
- PROV2194: "2194"
+ PROV2194: "Eastern Escravian Sea"
  PROV2195: "Joseqan"
  PROV2196: "Shinkhot"
  PROV2197: "Bayajutol"
- PROV2198: "2198"
+ PROV2198: "Southern Escravian Sea"
  PROV2199: "Sinmoro"
  PROV2200: "Erbjo"
  PROV2201: "Panpallpan Coast"
@@ -2929,24 +2929,24 @@
  PROV2928: "2928"
  PROV2929: "2929"
  PROV2930: "2930"
- PROV2931: "2931"
+ PROV2931: "Chueyat Coast"
  PROV2932: "2932"
  PROV2933: "2933"
- PROV2934: "2934"
+ PROV2934: "Bài Bay"
  PROV2935: "2935"
  PROV2936: "2936"
- PROV2937: "2937"
- PROV2938: "2938"
+ PROV2937: "Ubatvian Gulf"
+ PROV2938: "Katnian Sea"
  PROV2939: "2939"
  PROV2940: "Pemtitikian Bay"
  PROV2941: "2941"
  PROV2942: "2942"
  PROV2943: "2943"
  PROV2944: "2944"
- PROV2945: "2945"
+ PROV2945: "Anakapan Sea"
  PROV2946: "2946"
  PROV2947: "2947"
- PROV2948: "2948"
+ PROV2948: "Western Katnian Sea"
  PROV2949: "2949"
  PROV2950: "2950"
  PROV2951: "Touicholi Coast"
@@ -2974,7 +2974,7 @@
  PROV2973: "2973"
  PROV2974: "2974"
  PROV2975: "2975"
- PROV2976: "2976"
+ PROV2976: "Cuan Gulf"
  PROV2977: "2977"
  PROV2978: "2978"
  PROV2979: "2979"
@@ -3706,7 +3706,7 @@
  PROV3705: "3705"
  PROV3706: "3706"
  PROV3707: "Parhali"
- PROV3708: "3708"
+ PROV3708: "Western Kaniskatian Sea"
  PROV3709: "Nogkuli"
  PROV3710: "Agihiya"
  PROV3711: "Tughili"
@@ -3726,7 +3726,7 @@
  PROV3725: "3725"
  PROV3726: "Maratam"
  PROV3727: "Daraka"
- PROV3728: "3728"
+ PROV3728: "Kaniskatian Sea"
  PROV3729: "Bhrikta"
  PROV3730: "Pradespa"
  PROV3731: "Kamarpas"
