--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -2385,7 +2385,7 @@
  claiming_the_shogunate_tooltip: "[new_shogunate.GetName] will be the leader of the new Shogunate.\nAll Daimyo's loyal to the Shogunate will be transferred to [new_shogunate.GetName]."
  INDEPENDENCE_WAR_NAME: "$ORDER$$FIRST$ War for Independence"
  DEFENDER_DESC: "The Defender of the Faith gets Casus Belli to enforce religious unity. This will cost §Y$VALUE$§W¤. After §Y$MONTHS$§W months, countries with more prestige than the current Defender can claim the title. \nYou'll also lose if you decline a call to war from a country of your faith being attacked by infidels, or if you lose a war to infidels."
- CARDINAL_NEW: "§YActive cardinal§!\nWe control this active cardinal from $HOME|Y$. Each active cardinal gives us $BENEFIT$ PaEpiscopalnfluenceer year."
+ CARDINAL_NEW: "§YActive cardinal§!\nWe control this active cardinal from $HOME|Y$. Each active cardinal gives us $BENEFIT$ Episcopal Influence year."
  NO_ACTIVE_CARDINALS: "Spend your papal influence to vote on future cardinals to increase your chance to control a cardinal in the Papacy in the future."
  OPEN_PAPACY: "§YPapacy view§!\nClick here to open the papacy view."
  NAME: "Name"
@@ -2442,13 +2442,13 @@
  EV_SIEGE_COMBAT: "siege combat"
  EV_MANEUVER: "maneuver"
  SEND_GIFT: "Send Gift"
- AUTOMATING_CARDINAL: "Automatic Spending for §Y$CARDINAL$§! is currently ON. You will automatically spend PaEpiscopalnfluenceo try and maintain control of this cardinal."
- NOT_AUTOMATING_CARDINAL: "Automatic Spending for §Y$CARDINAL$§! is currently OFF. You will need to manually spend PaEpiscopalnfluenceo maintain control of this cardinal."
+ AUTOMATING_CARDINAL: "Automatic Spending for §Y$CARDINAL$§! is currently ON. You will automatically spend Episcopal Influence try and maintain control of this cardinal."
+ NOT_AUTOMATING_CARDINAL: "Automatic Spending for §Y$CARDINAL$§! is currently OFF. You will need to manually spend Episcopal Influence maintain control of this cardinal."
  AUTOMATE_CARDINAL_ON: "Click to turn Automatic Spending on."
  AUTOMATE_CARDINAL_OFF: "Click to turn Automatic Spending off."
  NO_ACTVIVE_CARDINALS: "No active cardinals."
  VOTE_ON_CARDINAL: "Spend Episcopal Influence to vote for this future cardinal."
- VOTE_ONE_ON_CARDINAL: "§YLeft click§! to spend $PI|R$ point of PaEpiscopalnfluenceo add $PI|G$ vote for this future cardinal."
+ VOTE_ONE_ON_CARDINAL: "§YLeft click§! to spend $PI|R$ point of Episcopal Influence add $PI|G$ vote for this future cardinal."
  CANT_VOTE_ON_CARDINAL: "You need at least $PI|Y$ point(s) of Episcopal Influence to vote for this cardinal."
  ACTIVE_CARDINALS: "The country that has the most loyal active cardinals will be the Episcopal controller."
  FUTURE_CARDINALS: "When an active cardinal dies, a random one of future cardinals will be chosen to be an active cardinal. The cardinal will be loyal to the one who has spent the most points on him."
@@ -2460,7 +2460,7 @@
  PAPAL_CURIA_TREASURY_NOT_ENOUGH: "§RYou need at least $COST|Y0$¤ Curia Treasury Available to take this action.§!"
  PAPAL_COST: "Costs $COST|Y0$ Episcopal Influence.\n"
  PAPAL_CURIA_TREASURY_COST: "Costs $COST|Y0$¤ from the Curia Treasury.\n"
- PAPAL_INVEST: "Spend §Y$MOD_COST$§W PaEpiscopalnfluenceo gain §Y$COST$§W Invested influence towards becoming the next Episcopal Controller."
+ PAPAL_INVEST: "Spend §Y$MOD_COST$§W Episcopal Influence gain §Y$COST$§W Invested influence towards becoming the next Episcopal Controller."
  SORT_BY_SIZE: "Sort by the size of the army"
  SORT_BY_MORALE: "Sort by the morale of the army"
  SORT_BY_LOCATION: "Sort by the army's location"
