ehren cultures name changes

--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -26,7 +26,7 @@
  ## Government
 
  ehrenic_confederation: "2nd Ehrenic Confederation"
- ehrenic_confederation_desc: "The Confederation is a union between the cities and states of ehren and noorden peoples. After the brutal civil war and the fall of 1st Ehrenic Confederation, this new government has been proclaimed, even more disfunctional than the last."
+ ehrenic_confederation_desc: "The Confederation is a union between the cities and states of ehren people. After the brutal civil war and the fall of 1st Ehrenic Confederation, this new government has been proclaimed, even more disfunctional than the last."
 
  ## Mechanics
 
