--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -45,10 +45,10 @@
  contrafian: "Contrafian"
  novoregnian: "Novoregnian"
 
- ehrenic_group: "Ehrenic"
- ehren: "Ehren"
- noorden: "Noorden"
- niftrand: "Niftrand"
+ ehren_group: "Ehren"
+ proffen: "Proffen"
+ nortwerten: "Nortwerten"
+ niftvolc: "Niftvolc"
 
  nifthemian_group: "Nifthemic"
  kloerde: "Kloerde"
