ehrenic -> ehren (without pantheon)

--- a/localisation/TD_01_flavour_pohjoismaa_l_english.yml
+++ b/localisation/TD_01_flavour_pohjoismaa_l_english.yml
@@ -15,7 +15,7 @@
  tummic_royal_council: "Royal Council"
  tummic_royal_council_desc: "The council is the second most important institution in the nation beside the royal family. They not only support the ruler, but help him administer his land. Members are often low nobles, judges, important merchants and sometimes even rich peasants."
  tummic_taedianization: "Taedianization"
- tummic_taedianization_desc: "To not fall behind our neighbours, we must take inspiration from more advanced, Mysentrian societies across the sea. Thanks to ehrenic influence this may come easier than expected."
+ tummic_taedianization_desc: "To not fall behind our neighbours, we must take inspiration from more advanced, Mysentrian societies across the sea. Thanks to ehren influence this may come easier than expected."
 
  
  tummland_ideas: "Tummic Ideas"
