--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -53,7 +53,7 @@
  PROV_ADJ52: "Karhukorpi"
  PROV_ADJ53: "Karhuvuori"
  PROV_ADJ54: "Pohjantähti"
- PROV_ADJ55: "East Ehrenic Sea"
+ PROV_ADJ55: "East Ehren Sea"
  PROV_ADJ56: "Lumitunturi"
  PROV_ADJ57: "Njuohccamávra"
  PROV_ADJ58: "Sáivomearkka"
