--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -53,7 +53,7 @@
  PROV52: "Karhukorpi"
  PROV53: "Karhuvuori"
  PROV54: "Pohjantähti"
- PROV55: "East Ehrenic Sea"
+ PROV55: "East Ehren Sea"
  PROV56: "Lumitunturi"
  PROV57: "Njuohccamávra"
  PROV58: "Sáivomearkka"
