gajifeng ideas + fixes

--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -319,3 +319,21 @@
  kaansuentin.1.c: "This is only a minor setback in our goal of keeping the family powerful."
  kaansuentin_bad_trait_and_puppet: "This heir will have a guaranteed sinful trait. After they ascend to the throne they will be a puppet to the clergy, increasing their influence and curtailing royal power."
  clerical_puppet_mod: "Puppet of the Zimbuksi"
+
+ gajifeng_group_ideas: "Gajifeng Minor Ideas"
+ gajifeng_group_ideas_bonus: "Gajifeng Minor Ambition"
+ gajifeng_group_ideas_start: "Gajifeng Minor Traditions"
+ gajifeng_ancestral_lands: "Ancestral Lands"
+ gajifeng_ancestral_lands_desc: "The lands of our people have always belonged to us. Even in our most ancient folklore, the lands of Mu and Lanta are heavily referenced and many spirits occupying these lands since the time immemorial. Despite this, there are many that wish to take our land away and destroy it for their own selfish desires."
+ gajifeng_pillars_of_heavens: "Pillars of Heavens"
+ gajifeng_pillars_of_heavens_desc: "The art of constructing large pillars is almost as ancient as our civilization. They scatter the land in large quantities, their size ranging from minor shrines to massive monuments, telling the stories of guarding-spirits and their lives before the ascension. They are not only important cultural landmarks, but they also serve as waystones and inspire many of our builders to construct even more wonderful buildings."
+ gajifeng_the_black_marble: "Dasenli Marble"
+ gajifeng_the_black_marble_desc: "Marble quarried in the Dasenli was always a luxury export to the Henlen dynasties in the north. The most prestigious kind is the black marble, mined only in Nuodepe. It is valued for its strength, resistance to weather and its aesthetic valor, coming mostly from its distinct color and intricate, even plant-like patterns."
+ gajifeng_valley_villages: "Valley Settlements"
+ gajifeng_valley_villages_desc: "Thanks to the high perticipations and frequent monsoons, these lands divided by thousands of rivers, many flowing in deep and inaccessible valleys. Despite the hardships of any large-scale construction, many of our people were forced to adapt, due to the importance of rivers to survival and trade. After years, this weakness became an advantage, allowing us to hold the eastern invaders for much longer."
+ gajifeng_sanctioned_monogamy: "Sanctioned Monogamy"
+ gajifeng_sanctioned_monogamy_desc: "Polygyny in Gajifeng society is seen as pious, allowing the man to atune to the divine much more easily. Historically, monogamy was reserved for men of lower status, with wealthier individuals being able to maintain more wives, but with the societal changes, many tribes forbade men from having only a single wife, in order to maintain a higher natural growth of population."
+ gajifeng_homeland_of_teamaking: "Homeland of Teamaking"
+ gajifeng_homeland_of_teamaking_desc: "Tea shrubs, now widely popular across the entire Hengtuand world, have originated in our land. Tea was originally brewed by our secular and spiritual leaders, in order to cleanse the mind of evil thoughts. Thanks to its taste and calming ablities, it spread with our merchants far and wide, with many developing their own drinking and brewing methods, but it was here that it all originated from."
+ gajifeng_transyanshan_trade: "Transyanshan Trade"
+ gajifeng_transyanshan_trade_desc: "Treacherous Yanshan mountains are often seen as impossible by outsiders to travel, especially in the harshes times of the year, but our people have managed how to trace paths through them, which allow for an all-year-long trade across the highlands. This proved to be beneficial, because we can mantain trade relations, even if our enemies have no way of accessing the market."
