--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -787,3 +787,6 @@
  
  TD_All_In_Empire_Get_tt: "§YAll in the Empire get:§!"
  TD_Empire_Provinces_Get_tt: "§YEmpire provinces get:§!"
+
+ decision_abandon_nevledi_title: "Abandon Nevledi"
+ decision_abandon_nevledi_desc: "The kingdom of Nevledi has fallen into the arms of the enemy"
