--- a/localisation/TD_01_flavour_kakigia_l_english.yml
+++ b/localisation/TD_01_flavour_kakigia_l_english.yml
@@ -141,3 +141,21 @@
  absukha_folk_syncretism_desc: "Merhaanic beliefs dominate the steppe and even our nation. Despite this, many local tales and legends have been integrated into their pantheon, solidifying the uniqueness of our culture."
  absukha_reclaiming_what_was_lost: "Reclaiming What Was Lost"
  absukha_reclaiming_what_was_lost_desc: "After the Bunelisuli collapse, the vast steppe awaits a new ruler. We cannot let this opportunity go to waste - the legendary Povativi Empire must be restored."
+
+ srushta_ideas: "Srushtan Ideas"
+ srushta_ideas_bonus: "Srushtan Ambition"
+ srushta_ideas_start: "Srushtan Traditions"
+ srushta_khans_bane: "Khan's Bane"
+ srushta_khans_bane_desc: "When the Bunelisuli bandits reached our land, many feared that our lands will soon become another weak tributary, but the great Abirad Varazvagshush challenged the current ruler of the horde to a duel. With many pessimistic about the outcome, everyone was surprised when the overly confident khan was laying on his knees, defeated. Our king was kind enough to spare his life, but for an oath of keeping our realm indepenent."
+ srushta_zakarturi_mounds: "Zakarturi Mounds"
+ srushta_zakarturi_mounds_desc: "In the ancient times, the Zakarturi Empire reached deep into Kakigia, subjugating various people and establishing advanced fortification efforts. Many of those mounds and forts were left dormant when the hordes came, but now they are being restored to their full functionality."
+ srushta_farmlands_of_eltym: "Farmlands of Eltym"
+ srushta_farmlands_of_eltym_desc: "Expansive farmlands surrounding the river Arag host a large chunk of our population, where thousands of people work in the fields, waiting for the day that the king calls them to defend the land."
+ srushta_laws_of_the_old_kingdom: "Laws of the Old Kingdom"
+ srushta_laws_of_the_old_kingdom_desc: "History of Srushta is much older than most merchants and foreign rulers imagine. We were a nation even in the times of the ancient Zakarturi and Hestani empires. Many of the customs practiced in these times have deteriorated and we adapted many foreign ideas of order, but the laws of our ancestors are slowly resurfacing with the need of reforms."
+ srushta_control_steppe_trade: "Control the Steppe Trade"
+ srushta_control_steppe_trade_desc: "Trade in the Kakigian steppe is often an alternative route to a typical flow of goods through the lake Hestan. Southern route is often safer, however the goods are more expensive due to many middlemen along the way. Monopolization of kakigian trade gives us an advantage and cheaper prices for western markets."
+ srushta_a_salbar_community: "A Salbar Community"
+ srushta_a_salbar_community_desc: "Many of our Merhaanic shamans believe that mutual understanding is the key to the unity of humankind. With that in mind, this approach is also applied by our rulers, which not only use this to strengthen our internal bonds, but also help us reach an agreement with the people of Earth."
+ srushta_taming_the_steppe: "Taming the Steppe"
+ srushta_taming_the_steppe_desc: "Bunelisuli Empire brought with it only destruction, razing cities and ending any kingdoms in its way. Now what remains is a wasteland occupied by the wild steppemen. If we want to restore these lands to their formed glory, they need to be unified under one banner, either by force or diplomatic subjugation."
