--- a/localisation/TD_01_flavour_merhaan_l_english.yml
+++ b/localisation/TD_01_flavour_merhaan_l_english.yml
@@ -145,7 +145,7 @@
  desc_harmonized_tanagan: "We have succesfully harmonized with Tanagan"
 
  merhaan.1012.t: "Harmonization of Navch"
- merhaan.1012.desc: "People following Navch sect were mostly isolated from more popular schools of Merhaan, it allowed them to achieve more unique vision of our faith. Now these people are known to live in isolated communities but sometimes they come out and share their wisdom with us."
+ merhaan.1012.desc: "People following Navch sect were mostly isolated from more popular schools of Merhaan, it allowed them to achieve more unique view of our faith. Now these people are known to live in isolated communities, however occasionaly they leave their solitude and share a new wisdom with us."
  merhaan.1012.a: "Closer to truth"
  harmonized_navch: "Harmonized Navch"
  desc_harmonized_navch: "We have succesfully harmonized with Navch"
