--- a/localisation/TD_01_flavour_fawud_l_english.yml
+++ b/localisation/TD_01_flavour_fawud_l_english.yml
@@ -16,9 +16,9 @@
  unite_musarfs_title: "Unite Musarfic Tribes"
  unite_musarfs_desc: "If clans of want to survive they need to unite under singular banner, preferably ours."
  
- group_musarfic_ideas: "Musarfic Ideas"
- group_musarfic_ideas_start: "Musarfic Traditions"
- group_musarfic_ideas_bonus: "Musarfic Ambition"
+ group_musarfic_ideas: "Musarfic Minor Ideas"
+ group_musarfic_ideas_start: "Musarfic Minor Traditions"
+ group_musarfic_ideas_bonus: "Musarfic Minor Ambition"
  musarfic_folk_law: "Folk Law"
  musarfic_folk_law_desc: "People of Fawud have a large number of unwritten laws, many of which seem so trivial there never was any need to compile them in a unified codex."
  musarfic_family_bonds: "Clan Bonds"
