--- a/localisation/TD_01_flavour_fawud_l_english.yml
+++ b/localisation/TD_01_flavour_fawud_l_english.yml
@@ -1,11 +1,18 @@
 ﻿l_english:
  ARD_RAM: "'Ard Ramh"
+ ARD_RAM_ADJ: "Musarfic"
  ARD_SAY: "'Ard Sayaanud"
+ ARD_SAY_ADJ: "Musarfic"
  ARD_TUN: "'Ard Tunihar"
+ ARD_TUN_ADJ: "Musarfic"
  ARD_IMA: "'Ard Imadra"
+ ARD_IMA_ADJ: "Musarfic"
  ARD_ALH: "'Ard Alshilq"
+ ARD_ALH_ADJ: "Musarfic"
  ARD_KUB: "'Ard Kuhbiri"
+ ARD_KUB_ADJ: "Musarfic"
  ARD_ALU: "'Ard Alusarq"
+ ARD_ALU_ADJ: "Musarfic"
  
  fawud.1.t: "Restore original color"
  fawud.1.desc: "My liege, how shall we present our country on official maps?"
