--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -344,7 +344,7 @@
  PROV_ADJ343: "Peleksmezs"
  PROV_ADJ344: "Riyadunic Coast"
  PROV_ADJ345: "Blazma"
- PROV_ADJ346: "Hercegaosta"
+ PROV_ADJ346: "Hercogaosta"
  PROV_ADJ347: "Sea of Laima"
  PROV_ADJ348: "Sena Egle"
  PROV_ADJ349: "Wedlan Coast"
