--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -219,7 +219,7 @@
  PROV218: "Barquna"
  PROV219: "Liškar"
  PROV220: "Zawarmahz"
- PROV221: "Hercogaostan Coast"
+ PROV221: "Gulf of Marstonia"
  PROV222: "Rahala"
  PROV223: "Lauagusa"
  PROV224: "Helasam"
@@ -344,7 +344,7 @@
  PROV343: "Peleksmezs"
  PROV344: "Ridyahani Coast"
  PROV345: "Blazma"
- PROV346: "Hercegaosta"
+ PROV346: "Hercogaosta"
  PROV347: "Sea of Laima"
  PROV348: "Sena Egle"
  PROV349: "Wedlan Coast"
