--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3907,11 +3907,11 @@
  PROV3906: "3906"
  PROV3907: "3907"
  PROV3908: "3908"
- PROV3909: "3909"
+ PROV3909: "Khombun"
  PROV3910: "3910"
  PROV3911: "3911"
  PROV3912: "3912"
- PROV3913: "3913"
+ PROV3913: "Siangen"
  PROV3914: "3914"
  PROV3915: "3915"
  PROV3916: "3916"
