--- a/localisation/TD_01_flavour_prices_l_english.yml
+++ b/localisation/TD_01_flavour_prices_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- prices.100.t: "Restoration of Gisisn Granaries"
+ prices.100.t: "Restoration of Gisian Granaries"
  RESTORED_GISIAN_GRANARY: "Gisian Granaries"
  TD_restored_importance_modifier: "Restored Importance"
  desc_TD_restored_importance_modifier: "Slowly lessening in importance following the Zakarturi collapse, Kedipol is once again a window to the world for Kakigian nations."
