--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -14,7 +14,14 @@
  province_is_or_accepts_merhaan_tt: "The Religion of §Y[Root.GetName]§! is §YMerhaan§! and is either the State or the Syncretic Religion of the owner."
 
  matliman_canal: "Matliman Canal"
+ decision_matliman_canal_title: "Matliman Land Preparation"
+ decision_matliman_canal_desc: "Matliman is a potential spot for a canal connecting Maqitan and Middelandse seas, making many more merchants deciding to travel through our lands. In order to construct it as fast as possible, we have to prepare the land for the groundworks."
+ canal_matliman_early: "§YMatliman Canal§! will now be able to be constructed regardless of our administrative technology."
  barzakhan_canal: "Barzakhan Canal"
+ decision_barzakhan_canal_title: "Barzakhan Land Preparation"
+ decision_barzakhan_canal_desc: "Barzakhan is a potential spot for a canal connecting Maqitan sea and Lake Hestan, making many more merchants deciding to travel through our lands. In order to construct it as fast as possible, we have to prepare the land for the groundworks."
+ canal_barzakhan_early: "§YBarzakhan Canal§! will now be able to be constructed regardless of our administrative technology."
+
  
  imperial_palace: "Imperial palace"
  imperial_palace_desc: "Site of not only imperial diet, but also emperor's summer mansion."
