--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -180,7 +180,7 @@
  frankrani_muzbahi_connections: "Muzbahi Connections"
  frankrani_muzbahi_connections_desc: "The fall of many Muzbahi states to the fawudian barbarians led many of their scholars and warriors to flee east, where they can thrive without a thread of a raid on their home."
  frankrani_manayazani_glass: "Manayazani Glass"
- frankrani_manayazani_glass_desc: ""Manayazan Glassmaker" is often synonymous with a great artist, who is willing to spend great amounts of effort and money to finish his great work. Vases and jewelry in Frankras often depict major religious events, further bringing them splendor."
+ frankrani_manayazani_glass_desc: "\"Manayazan Glassmaker\" is often synonymous with a great artist, who is willing to spend great amounts of effort and money to finish his great work. Vases and jewelry in Frankras often depict major religious events, further bringing them splendor."
  frankrani_visparayan_adaptation: "Visparayan Adaptation"
  frankrani_visparayan_adaptation_desc: "History of Visparaya goes as far as trade existed. Our settlements near these ancient nations have led to many of our people to embrace not only some of their customs, but also military tactics and political ideologies."
  frankrani_eopedian_homeland: "Eopedian Homeland"
