--- a/localisation/TD_01_flavour_liemarian_l_english.yml
+++ b/localisation/TD_01_flavour_liemarian_l_english.yml
@@ -21,23 +21,27 @@
  settle_the_doctrine_title: "Settle the Doctrines"
  settle_the_doctrine_desc: "As the liemarian community grows the cracks are being slowly revealed. Many rulers see our faith as a way to gain autonomy from the emperor, while other seek only absolute power. With many branches drifting away we need to bring them back together."
 
- mobilisation_against_evil: "Mobilization Against Evil"
- mobilisation_against_evil_DESC: "To free the world from evil we need to fight not only in teological duels, but also in earthly battles."
- popularise_philosophical_education: "Popularize Philosophical Education"
- popularise_philosophical_education_DESC: "To further the conversion of heathens, every person not only needs to know how to discuss and debate, but also how the world around them works."
- new_world_missionaries: "New World Missionaries"
- new_world_missionaries_DESC: "New World primitives are like a virgin soil for our new religious worldview, and we shall bring them knowledge of it."
- unite_liemarian_community: "Strengthen Liemarian Community"
- unite_liemarian_community_DESC: "Strength comes from unity, and so we must bring liemarians together and focus on the common enemy."
+ mobilisation_against_evil: "Bellum Angelicum"
+ mobilisation_against_evil_DESC: "In order to free the world from evil we need to fight not only in theological debates, but also in earthly battles."
+ popularise_philosophical_education: "Sacra Cogitatio"
+ popularise_philosophical_education_DESC: "To further the conversion of heathens, every person not only needs to learn the holy word, but also how the wondrous world of God around them functions."
+ new_world_missionaries: "Ut Lucem Tenebras"
+ new_world_missionaries_DESC: "Minds of the new world's primitives are like a virgin soil, waiting for the blessings of saelianism, and we shall bring them knowledge of it."
+ unite_liemarian_community: "Vi Ab Unitate"
+ unite_liemarian_community_DESC: "Strength comes from unity and so we must bring liemarians together, fighting the infidels instead of our bretherens."
+ tributum_argentum: "Tributum Argentum"
+ tributum_argentum_DESC: "For most of its history, the argent tax was only paid by the nobility to the emperor, but now with the strictly sacral nature of Vicariate, it is a responsibility of every true saelian."
+ luxus_pauperis: "Luxus Pauperis"
+ luxus_pauperis_DESC: "It is said that the impoverished in wealth are the most faithful saelians. For their true faith they shall be rewarded."
  
- TD_Liemarian_illegitimate_episcopate: "They have become a Episcopal Controller in an illegitimate way"
+ TD_Liemarian_illegitimate_episcopate: "They have became a Episcopal Controller in an illegitimate way"
  TD_Liemarian_illegitimate_episcopate_mod: "Illegitimate Episcopal Controller"
  TD_Liemarian_Flourishment_of_Syncretism: "Flourishment of Religious Syncretism"
  TD_Liemarian_Syncretism_Condemned: "Religious Syncretism Condemned"
  TD_Active_Liemarian_missions: "Active Liemarian Missionaries"
- TD_Liemarian_zealot_administration: "Liemarian Zealot Administration"
- TD_Liemarian_church_support: "Support of the Liemarian Church"
- TD_Liemarian_church_abandoned_in_need: "Abandoned the Liemarian Church in times of need"
+ TD_Liemarian_zealot_administration: "Zealous Administration"
+ TD_Liemarian_church_support: "Support of the Church"
+ TD_Liemarian_church_abandoned_in_need: "Abandoned the Church"
  
  liemarian.5.t: "The Wirosepan Resurgence"
  liemarian.5.desc: "The dying faith of Wirosepan was originally only slightly adapted version of standard Saelian theology, but it soon became a whole new system of beliefs. While popular during its introduction to the isles, thanks to the efforts of dorchean nobility it was replaced by imperial model. This did not however eradicate the religion and during the age of reformation it entered its second golden age of popularity, being practiced not only by rural peasants but also scholars and nobility."
